* 2014-08-08 - jan.bauerdick@open-xchange.com

 - Fix for bug 33818: Added update task to check foreign keys and drop them if necessary

* 2014-08-06 - steffen.templin@open-xchange.com

 - Fix for bug 33918: Translate display names of subscription sources only if necessary

* 2014-08-04 - marcus.klein@open-xchange.com

 - Fix for bug 33891: Removed superfluous line throwing always an exception.

* 2014-08-04 - marc.arens@open-xchange.com

 - Fix for bug 33697: Respect destination folder for folder owners

* 2014-08-01 - thorben.betten@open-xchange.com

 - Fix for bug 33715: Accept new parameter "attach_src" for action=get request to let the client signal RFC822 source is supposed to be
                      attached to generated JSON mail representation
                      
* 2014-07-31 - thorben.betten@open-xchange.com

 - Fix for bug 33839: Escape site information when generating the publication site from selected template

* 2014-07-29 - tobias.friedrich@open-xchange.com

 - Fix for bug 33652: Also accept "updateToken" requests without service identifier 

* 2014-07-11 - jan.bauerdick@open-xchange.com

 - Fix for bug 33478: Run AttachmentCleaner without delay

* 2014-07-11 - thorben.betten@open-xchange.com

 - Fix for bug 33522: Wrong table was referenced in SQL statement to prepare table "user_attribute" to have UUID as primary key
 - Fix for bug 33396: Try to recover from malformed Content-Type value like ``=?windows-1252?q?application/pdf; name="blatt8.pdf"´´
 - Fix for bug 33374: Check for null prior to JSON conversion
 - Fix for bug 31610: Introduced a rate limiter when checking for new mails; allowing not more than one run per 5 seconds

* 2014-07-09 - marc.arens@open-xchange.com

 - Fix for bug 27301: A MembershipListener recognizes a leaving hazelcast node and triggers a cleanup for its resources
 
* 2014-07-09 - martin.schneider@open-xchange.com

 - Fix for bug 33201: improved output if parameter is missing
